objects/BMCServiceDesk__SYSQVFieldsObjectsInfo__c.object
<CustomObject>
    <description>This object allows you to store data for the object and field mapping in QuickViews.</description>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVFieldInfo__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSQVFieldInfo</label>
        <referenceTo>BMCServiceDesk__SYSQVFieldInfo__c</referenceTo>
        <relationshipLabel>SYSQVFieldsObjectsInfo</relationshipLabel>
        <relationshipName>SYSQVFieldsObjectsInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__FKSYSQVQuery__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>FKSYSQVQuery</label>
        <referenceTo>BMCServiceDesk__SYSQVQuery__c</referenceTo>
        <relationshipLabel>SYSQVQuery SYSQVFieldsObjectsInfo</relationshipLabel>
        <relationshipName>SYSQVFieldsObjectsInfo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Sequence__c</fullName>
        <externalId>true</externalId>
        <label>Sequence Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__objectName__c</fullName>
        <label>Object Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Quickview Fields Objects Mapping</label>
    <listViews>
        <fullName>BMCServiceDesk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>SYSQVFieldsObjectsInfo Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SYSQVFieldsObjectsInfo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>